--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,17 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+
+body{
+  margin: 0;
+  overflow-x: hidden;
+}
+
+:root{
+  /* --var--headerBg: 	 linear-gradient(135deg, #1a1a1ae6, #000000, #1a1a1ae6);  */
+  --var--headerText: #856447;
+  --var--headerBg: 	 #25271a; 
+
 }
